# elitist-dune

./: CMakeLists.txt  TODO.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/volian/elitistdune/: ElitistDune.java
android/app/src/main/res/values/: strings.xml
res/shader/: background.frag  background.vert  basic.frag  basic.vert  helper.frag  helper.vert  sdf.frag  sdf.vert
res/song/: test.usong  test2.usong  test3.usong
res/texture/: font.json
src/: Font.hpp  Level.hpp  SongInfo.cpp  SongInfo.hpp  Soundfont.hpp  Stream.cpp  Stream.hpp  Tile.cpp  Tile.hpp  Utility.hpp  main.cpp
